--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_map">Map</string>
     <string name="title_settings">Settings</string>
     <string name="title_about">About</string>
+    <string name="appllyconfig">AppllyConfig</string>
 </resources>
