--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_map">Map</string>
     <string name="title_settings">Settings</string>
     <string name="title_about">About</string>
-    <string name="applly">Applly</string>
-    <string name="temp">Temp</string>
+    <string name="applly">Apply</string>
+    <string name="temp">Temperature</string>
     <string name="radius">Radius</string>
 </resources>
